--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </h1>
         
         <div class="input-container">
-            <input type="text" id="itemInput" placeholder="Was möchtest du einkaufen? ✨" />
+            <input type="text" id="itemInput" placeholder="Füge etwas hinzu! ✨" />
             <button onclick="addItem()">+</button>
         </div>
 
@@ -191,7 +191,6 @@
         
         <div class="empty-state" id="emptyState">
             <span>📝 Deine Einkaufsliste ist leer</span>
-            <small style="font-size: 0.8em; margin-top: 10px; opacity: 0.6;">Füge etwas hinzu! ✨</small>
         </div>
     </div>
 
