Change delete button color to green

--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
             border: 1px solid rgba(131, 56, 236, 0.2);
         }
         .item-text { color: white; font-size: 18px; flex: 1; }
-        .delete-btn { background: #ff006e; border: none; padding: 10px 15px; border-radius: 12px; color: white; cursor: pointer; }
+        .delete-btn { background: #28a745; border: none; padding: 10px 15px; border-radius: 12px; color: white; cursor: pointer; }
+    .delete-btn:hover {
+    background: #218838;
+}
+    
+    
     </style>
 </head>
 <body>
