Change delete button color and hover effects
Updated delete button styles for better visibility and interaction.

--- a/index.html
+++ b/index.html
@@ -172,10 +172,14 @@
             border: 1px solid rgba(131, 56, 236, 0.2);
         }
         .item-text { color: white; font-size: 18px; flex: 1; }
-        .delete-btn { background: #28a745; border: none; padding: 10px 15px; border-radius: 12px; color: white; cursor: pointer; }
-    .delete-btn:hover {
-    background: #218838;
+        .delete-btn { background: #00c853; border: none; padding: 10px 15px; border-radius: 12px; color: white; cursor: pointer; }
+        .delete-btn:hover {
+    background: #00e676; /* etwas helleres Grün beim Hover */
+    box-shadow: 0 0 15px #00e676, 0 0 30px #00e676;
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
+ 
     
     
     </style>
