--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     const li = document.createElement('li');
                     li.className = 'shopping-item';
                     li.innerHTML = `<span class="item-text">${value.name}</span>
-                                   <button class="delete-btn" onclick="deleteItem('${key}')">✅</button>`;
+                                   <button class="delete-btn" onclick="deleteItem('${key}')">✓</button>`;
                     list.appendChild(li);
                 });
             } else {
